css/adhiraj.css
html {
  height: 100%;
}
body {
  background-color: #FFFEFB;
  font-family: "open sans", arial, sans-serif;
  font-size: 16px;
  height: 100%;
  position: relative;
}
@media (min-width: 768px) {
  .sb-fixed {
    position: fixed;
    left: 0;
    width: inherit;
  }
}
p {
  line-height: 1.6em;
  margin: 1em 0;
}
h3 {
  font-family: serif;
}
hr { 
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #3E3E47;
  margin: 1em 0;
  padding: 0;
}

/* Items */

.item {
  overflow: auto;
  margin-bottom: 20px;
}
.item-header > .item-desc {
  font-style: italic;
  clear: both;
}
.item-name {
  font-weight: bold;
  font-size: 1.25em;
  font-family: serif;
}
.item-date {
  font-weight: bold;
  float: right;
  text-align: right;
  width: 25%;
}
.item-content {
  clear: both;
  margin-top: 5px;
  margin-bottom: 0;
}
.item.following {
  margin-top: -20px;
}

/* Images */
img.logo {
  max-height: 75px;
  margin-bottom: 10px;
}
#fb-logo {
  max-height: 50px;
}

/* Sidebar */

#name-main {
  margin: 20px auto;
  text-align: center;
}
.sidebar-nav {
  color: #FFFEFB;
  background-color: #3E3E47;
  min-height: 100%;
  overflow: hidden;
  /*position: absolute;
  top: 0;
  bottom: 0;*/
}
#sidebar-main {
  padding: 10px 20px;
  text-align: center;
}
#profile-pic {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* Navigation tabs */

.tabs-left > .nav-tabs > li.active a,
.tabs-left > .nav-tabs > li.active a:hover {
  color: #3E3E47;
  background-color: #FFFEFB;
  border-color: transparent;
  font-weight: bold;
}
.tabs-left > .nav-tabs > li {
  float: right;
  clear: both;
}
.tabs-left > .nav-tabs > li a:hover {
  background-color: transparent;
  border-color: transparent;
  font-weight: bold;
}
.tabs-left > .nav-tabs > li > a {
  color: #FFFEFB;
  min-width: 0;
  padding-left: 16px; /* padding-right +4 to soften the imbalance caused by
                         rounded corners */
  margin-bottom: 15px;
}
.tabs-left > .nav-tabs {
  margin-right: 0px;
  border-right: 1px solid #3E3E47;
  float: right;
  text-align: right;
}


/* Main content */
.tab-pane {
  margin-top: 20px;
}
.tab-content {
  margin-right: 2.564102564102564%;
}
.span9 {
  margin-left: 0!important;
  padding-left: 20px;
  padding-right: 20px;
}
img.thumbnail {
  width: 300px;
  height: 300px;
}

